iptables
# Generated by iptables-save v1.4.7 on Tue May 22 10:17:52 2018
*raw
:PREROUTING ACCEPT [20967244:17331275764]
:OUTPUT ACCEPT [16801948:16608181949]
COMMIT
# Completed on Tue May 22 10:17:52 2018
# Generated by iptables-save v1.4.7 on Tue May 22 10:17:52 2018
*nat
:PREROUTING ACCEPT [300495:16672197]
:POSTROUTING ACCEPT [91485:5554834]
:OUTPUT ACCEPT [91485:5554834]
COMMIT
# Completed on Tue May 22 10:17:52 2018
# Generated by iptables-save v1.4.7 on Tue May 22 10:17:52 2018
*mangle
:PREROUTING ACCEPT [20967244:17331275764]
:INPUT ACCEPT [20967166:17331272644]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [16801948:16608181949]
:POSTROUTING ACCEPT [16801948:16608181949]
COMMIT
# Completed on Tue May 22 10:17:52 2018
# Generated by iptables-save v1.4.7 on Tue May 22 10:17:52 2018
*filter
:INPUT ACCEPT [119159:5855104]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [16770385:16599272647]
-A INPUT -s 127.0.0.1/32 -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 29306 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8000 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 3128 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 5432 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A INPUT -s 1.1.1.0/24 -j ACCEPT 
-A INPUT -s 1.1.1.1/32 -j ACCEPT 
COMMIT
# Completed on Tue May 22 10:17:52 2018
